--- a/packages/@glimmer/opcode-compiler/package.json
+++ b/packages/@glimmer/opcode-compiler/package.json
@@ -8,7 +8,8 @@
     "@glimmer/interfaces": "^0.30.5",
     "@glimmer/program": "^0.30.5",
     "@glimmer/vm": "^0.30.5",
-    "@glimmer/encoder": "^0.30.5"
+    "@glimmer/encoder": "^0.30.5",
+    "@glimmer/reference": "^0.30.5"
   },
   "devDependencies": {
     "@glimmer/local-debug-flags": "^0.30.5",
